fix(player): prevent mobile controls flicker

--- a/src/components/Hamburger/style.scss
+++ b/src/components/Hamburger/style.scss
@@ -6,6 +6,7 @@
 
 .hamburger {
   position: fixed;
+  z-index: 1500;
   background: none;
   border: none;
   transition: background-color 0.15s ease;
